--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-multiparty": "^2.1.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "multer": "^1.3.0",
     "mysql2": "^1.4.2",
     "request": "^2.83.0",
     "sequelize": "^4.22.5",
