--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "mysql2": "^1.4.2",
+    "nodemailer": "^4.4.0",
     "request": "^2.83.0",
     "sequelize": "^4.22.5",
     "winston": "^2.4.0"
